--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
   <body>
     <h1>TOPWISE BREWING</h1>
-    <img src="images/topwise.jpg">
+    <img src="topwise.jpg">
 
     <p>coming soon...</p>
 
