--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-20">
-    <title>mmm...</title>
+    <title>Topwise Brewing</title>
     </head>
   <body>
-    <h2>TOPWISE BREWING</h2>
+    <h0>TOPWISE BREWING</h0>
     <img src="topwise.jpg">
 
     <p>coming soon...</p>
