--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
     <title>Topwise Brewing</title>
     </head>
   <body>
-    <h0>TOPWISE BREWING</h0>
-
-
-
-    <img src="topwise.jpg">
+    <img src="Website2.png">
 
 
 
