--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-20">
     <title>Topwise Brewing</title>
-    </head>
+    <style>
+      .box {
+        width: 30%;
+        height: 200px;
+        border: 5px dashed #f7a239;
+      }
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    </style>
+  </head>
   <body>
     <img src="Website2.png">
 
