--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
         width: 80%;
         height: 80%;
       }
+      .aligncenter {
+    text-align: center;
+     }
     </style>
   </head>
   <body>
-    <img src="Website2.png">
+    <img src="Website2.png"/>
 
 
 
