--- a/index.html
+++ b/index.html
@@ -12,18 +12,16 @@
         width: 80%;
         height: 80%;
       }
-      .aligncenter {
-    text-align: center;
-     }
     </style>
   </head>
   <body>
-    <img src="Website2.png"/>
+    <p class="aligncenter">
+      <img src="Website2.png"/>  
 
 
 
 
-    <p>coming soon...</p>
+    coming soon...</p>
 
   <script src="scripts/main.js"></script>
   </body>
