--- a/index.html
+++ b/index.html
@@ -16,12 +16,8 @@
   </head>
   <body>
     <p class="aligncenter">
-      <img src="Website2.png"/>  
-
-
-
-
-    coming soon...</p>
+      <img src="Website2.png" alt="centered image" />  
+    </p>
 
   <script src="scripts/main.js"></script>
   </body>
