--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     </style>
   </head>
   <body>
-    <p class="aligncenter">
-      <img src="Website2.png" alt="centered image" />  
-    </p>
+    <p style="text-align:center;">
+      <img src="Website2.png" alt="centered image"></p>
 
   <script src="scripts/main.js"></script>
   </body>
