--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <title>Topwise Brewing</title>
+    <style>
+       img {
+        width: 80%;
+        height: 80%;
+      }
+    </style>
   </head>
   <body>
     <p style="text-align:center;">
