--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <title>Topwise Brewing</title>
     <style>
+      .box {
+        width: 30%;
+        height: 200px;
+        border: 5px dashed #f7a239;
+      }
        img {
         width: 80%;
         height: 80%;
