--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <p style="text-align:center;">
-      <img src="Website2.png" alt="centered image"></p>
+      <img src="newweb.png" alt="centered image"></p>
 
   <script src="scripts/main.js"></script>
   </body>
