--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
         border: 5px dashed #f7a239;
       }
        img {
-        width: 150%;
-        height: 150%;
+        max-width: 100%;
+        max-height: 100vh;
+        width: auto;
+        margin: auto;
       }
     </style>
   </head>
