--- a/index.html
+++ b/index.html
@@ -3,17 +3,13 @@
   <head>
     <title>Topwise Brewing</title>
     <style>
-      .box {
-        width: 30%;
-        height: 200px;
-        border: 5px dashed #f7a239;
-      }
-       img {
-        max-width: 100%;
-        max-height: 100vh;
-        width: auto;
-        margin: auto;
-      }
+      div {
+        width: 100%;
+        height: 300px;
+        background-image: newweb.png;
+        background-size: cover;
+        border: 2px solid #e3985a;
+     }
     </style>
   </head>
   <body>
