--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
   <head>
     <title>Topwise Brewing</title>
     <style>
-      div {
-        width: 100%;
-        height: 300px;
-        background-image: newweb.png;
-        background-size: cover;
-        border: 2px solid #e3985a;
-     }
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+    }
+      
+    img {
+       padding: 0;
+       display: block;
+       margin: 0 auto;
+       max-height: 100%;
+       max-width: 100%;
+   }
     </style>
   </head>
   <body>
     <p style="text-align:center;">
-      <img src="newweb.png" alt="centered image"></p>
+      <img src="newweb.png"></p>
 
   <script src="scripts/main.js"></script>
   </body>
