--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <p style="text-align:center;">
-      <img src="newweb1.png"></p>
+      <img src="newweb.png"></p>
 
   <script src="scripts/main.js"></script>
   </body>
